name:               mime
version:            0.3.1
synopsis:           Working with MIME types.
description:        Working with MIME types.
category:           Codec
license:            BSD3
license-file:       LICENSE
author:             Galois Inc.
maintainer:         Sigbjorn Finne <sigbjorn.finne@gmail.com>
Copyright:          (c) 2006-2009 Galois Inc.
cabal-version:      >= 1.2.0
build-type:         Simple

flag split-base

library
  if flag(split-base)
    build-depends:   base >= 3
  else
    build-depends:   base < 3

  exposed-modules: Codec.MIME.Type
                   Codec.MIME.Parse
                   Codec.MIME.Utils
                   Codec.MIME.Base64
                   Codec.MIME.Decode
                   Codec.MIME.QuotedPrintable
  ghc-options:     -Wall -O2
