name:               mime
version:            0.4.0.2
synopsis:           Working with MIME types.
description:        Working with MIME types.
category:           Codec
license:            BSD3
license-file:       LICENSE
author:             Sigbjorn Finne, Galois, Inc.
maintainer:         Sigbjorn Finne <sigbjorn.finne@gmail.com>
Copyright:          (c) 2006-2009 Galois Inc.
cabal-version:       >=1.10
build-type:         Simple
homepage:           https://github.com/GaloisInc/mime
Extra-Source-Files: CHANGES

library
  build-depends:    base >= 4 && < 5
                    , text >= 0.9

  exposed-modules: Codec.MIME.Type
                   Codec.MIME.Parse
                   Codec.MIME.Utils
                   Codec.MIME.Base64
                   Codec.MIME.Decode
                   Codec.MIME.QuotedPrintable
  ghc-options:     -Wall

test-suite tester
  type:                exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base, text, bytestring, mime, hspec

source-repository head
  type:     git
  location: git://github.com/GaloisInc/mime.git
